--- a/Repairedproj/product/templates/product.html
+++ b/Repairedproj/product/templates/product.html
@@ -1,6 +1,29 @@
 {% extends "base.html" %}
+{% load humanize %}
 {% block contents %}
-{% for product in object_list %}
-    {{ product.name }}: {{ product.price }}
+    <div class="row mt-5">
+        <div class="col-12">
+            <table class="table table-light">
+                <thead class="thead-light">
+                <tr>
+                    <th scope="col">#</th>
+                    <th scope="col">Product Name</th>
+                    <th scope="col">Price</th>
+                    <th scope="col">Date</th>
+                </tr>
+                </thead>
+                <tbody class="text-dark">
+ {% for product in object_list %}
+                    <tr>
+                        <th scope="row">{{ product.id }}</th>
+                        <th>{{ product.name }}</th>
+                        <th>{{ product.price|intcomma }} $</th>
+                        <th>{{ product.registered_date|date:'Y/m/d H:i'}}</th>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+    </div>
+
 {% endfor %}
 {% endblock %}
