--- a/Repairedproj/product/templates/product_detail.html
+++ b/Repairedproj/product/templates/product_detail.html
@@ -27,6 +27,7 @@
                 </li>
                 <li class="list-group-item">가격: {{ product.price|intcomma }} $</li>
                 <li class="list-group-item">등록 날짜: {{ product.registered_date|date:'Y/m/d H:i' }}</li>
+                <li class="list-group-item">재고: {{ product.stock|intcomma }} 개</li>
                 <li class="list-group-item">상품 설명: {{ product.description }}</li>
             </ul>
         </div>
