Decorators 생성, order와 product views에 decorators 사용자 권한 추가(product에 admin 권한 미완)

--- a/Repairedproj/order/templates/order.html
+++ b/Repairedproj/order/templates/order.html
@@ -22,7 +22,7 @@
                         <a href="">{{ order.product }}</a>
                     </th>
                     <th>{{ order.quantity|intcomma}} 개</th>
-                    <th>{{ order.register_date|date: 'Y=m=d H:i }}</th>
+                    <th>{{ order.registered_date|date:'Y-m-d H:i' }}</th>
                 </tr>
                 {% endfor %}
             </tbody>
