--- a/Repairedproj/product/templates/product_detail.html
+++ b/Repairedproj/product/templates/product_detail.html
@@ -34,7 +34,7 @@
     </div>
         <div class="row">
             <div class="col-12">
-                <a href="/product/">목록</a>
+                <a href="/product/">목록으로</a>
             </div>
         </div>
 {% endblock %}
