Producthtml headblock 생성

--- a/Repairedproj/product/templates/product.html
+++ b/Repairedproj/product/templates/product.html
@@ -1,5 +1,8 @@
 {% extends "base.html" %}
 {% load humanize %}
+{% block header %}
+    
+{% endblock %}
 {% block contents %}
     <div class="row mt-5">
         <div class="col-12">
