--- a/Repairedproj/product/templates/product.html
+++ b/Repairedproj/product/templates/product.html
@@ -26,10 +26,10 @@
                 </tr>
             </thead>
             <tbody class="text-dark">
-             {% for product in object_list %}
+             {% for product in product_list %}
                 <tr>
                     <th scope="row">{{ product.id }}</th>
-                    <th><a href="/product/{{ product.id }}">{{ product.name }}</a></th>
+                    <th><a id="product-{{ product.id }}" href="/product/{{ product.id }}">{{ product.name }}</a></th>
                     <th>{{ product.price|intcomma }} $</th>
                     <th>{{ product.registered_date|date:'Y/m/d H:i'}}</th>
                 </tr>
