Popover pk +1 오류 상태, Popover 안뜸

--- a/Repairedproj/product/templates/product.html
+++ b/Repairedproj/product/templates/product.html
@@ -1,17 +1,24 @@
 {% extends "base.html" %}
 {% load humanize %}
 {% block header %}
-    <script>
-        $(document).ready(function () {
+<script>
+    function product_detail(id) {
         $.ajax({
-            url: "/api/product",
+            url: "/api/product/" + id,
             success: function (result) {
-                console.log(result)
-                $("#weather-temp").html("<strong>" + result + "</strong> degrees");
+                $("#product-" + id).popover({
+                    html: true,
+                    content: result[id].name + "<br/>" + result[id].price
+                }).popover('show');
             }
         });
-    });
-    </script>
+    }
+
+    function product_leave(id) {
+        $("#product-" + id).popover('hide');
+    }
+    $(document).ready(function () {});
+</script>
 {% endblock %}
 {% block contents %}
     <div class="row mt-5">
@@ -26,16 +33,19 @@
                 </tr>
             </thead>
             <tbody class="text-dark">
-             {% for product in product_list %}
+                {% for product in product_list %}
                 <tr>
                     <th scope="row">{{ product.id }}</th>
-                    <th><a id="product-{{ product.id }}" href="/product/{{ product.id }}">{{ product.name }}</a></th>
+                    <th><a id="product-{{ product.id }}" onmouseenter="product_detail({{ product.id }});"
+                        onmouseleave="product_leave({{ product.id }});" href="/product/{{ product.id }}">{{ product.name }}</a>
+                    </th>
                     <th>{{ product.price|intcomma }} $</th>
                     <th>{{ product.registered_date|date:'Y/m/d H:i'}}</th>
                 </tr>
-                {% endfor %}}
+                {% endfor %}
             </tbody>
         </table>
     </div>
 </div>
+
 {% endblock %}
