Popover error 해결

--- a/Repairedproj/product/templates/product.html
+++ b/Repairedproj/product/templates/product.html
@@ -8,7 +8,7 @@
             success: function (result) {
                 $("#product-" + id).popover({
                     html: true,
-                    content: result[id].name + "<br/>" + result[id].price
+                    content: result.name + "<br/>" + result.price
                 }).popover('show');
             }
         });
