--- a/Repairedproj/order/templates/order.html
+++ b/Repairedproj/order/templates/order.html
@@ -13,7 +13,7 @@
                 </tr>
                </thead>
                <tbody class="text-dark">
-                {% for order in oder_list %}
+                {% for order in order_list %}
                 <tr>
                     <th scope="row">{{ order.id }}</th>
                     <th>{{ order.product }}</th>
