--- a/Repairedproj/order/templates/admin/order_change_form.html
+++ b/Repairedproj/order/templates/admin/order_change_form.html
@@ -1,12 +1,2 @@
-{% extends 'admin/change_list.html' %}
+{% extends 'admin/change_form.html' %}
 {% load static %}
-
-{% block extrahead %}
-{{ block.super }}
-<script>
-    function order_refund_submit(obj_id) {
-        jQuery("#changelist-form").append('<input type="hidden" name="obj_id" value="' +obj_id+ '">');
-        jQuery("#changelist-form").submit();
-    }
-</script>
-{% endblock %}
