--- a/Repairedproj/product/templates/product.html
+++ b/Repairedproj/product/templates/product.html
@@ -1,6 +1,20 @@
-{% extends "base.html" %}
 {% load humanize %}
-{% block header %}
+<html>
+    <head>
+        <meta charset="utf-8">
+        <meta name="viewport" content=""width=device-width, initial-scale="1" />
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css"
+              integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
+        <script src="https://code.jquery.com/jquery-3.6.0.min.js"
+                integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js"
+                integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
+                integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.min.js"
+                integrity="sha384-+YQ4JLhjyBLPDQt//I+STsc9iw4uQqACwlvpslubQzn4u2UU2UFM80nGisd026JF" crossorigin="anonymous"></script>
+        <link rel="stylesheet" href="/static/product/product_list.css">
+
 <script>
     function product_detail(id) {
         $.ajax({
@@ -19,8 +33,14 @@
     }
     $(document).ready(function () {});
 </script>
-{% endblock %}
-{% block contents %}
+        <a class="top-box">
+            OK
+        </a>
+</head>
+
+<body>
+
+    <div class="container">
     <div class="row mt-5">
         <div class="col-12">
             <table class="table table-light">
@@ -47,5 +67,11 @@
         </table>
     </div>
 </div>
+<p>
+        {{ 2|apnumber }}
+</p>
 
-{% endblock %}
+</div>
+    </body>
+
+    </html>
